public/assets/css/main.css
/* ... */
.active\:bg-gray-100:active {
  --bg-opacity: 1;
  background-color: #f4f5f7;
  background-color: rgba(244, 245, 247, var(--bg-opacity));
}

.active\:bg-pink-700:active {
  --bg-opacity: 1;
  background-color: #bf125d;
  background-color: rgba(191, 18, 93, var(--bg-opacity));
}

.bg-gradient-to-r {
  background-image: linear-gradient(to right, var(--gradient-color-stops));
}

.from-teal-400 {
  --gradient-from-color: #16bdca;
  --gradient-color-stops: var(--gradient-from-color), var(--gradient-to-color, rgba(22, 189, 202, 0));
}

.to-blue-400 {
  --gradient-to-color: #76a9fa;
}

.to-blue-500 {
  --gradient-to-color: #3f83f8;
}

.border-transparent {
  border-color: transparent;
}

.border-gray-100 {
  --border-opacity: 1;
  border-color: #f4f5f7;
  border-color: rgba(244, 245, 247, var(--border-opacity));
}

.border-gray-300 {
  --border-opacity: 1;
  border-color: #d2d6dc;
  border-color: rgba(210, 214, 220, var(--border-opacity));
}

.border-pink-400 {
  --border-opacity: 1;
  border-color: #f17eb8;
  border-color: rgba(241, 126, 184, var(--border-opacity));
}

.focus\:border-blue-300:focus {
  --border-opacity: 1;
  border-color: #a4cafe;
  border-color: rgba(164, 202, 254, var(--border-opacity));
}

.focus\:border-pink-700:focus {
  --border-opacity: 1;
  border-color: #bf125d;
  border-color: rgba(191, 18, 93, var(--border-opacity));
}

.rounded {
  border-radius: 0.25rem;
}

.rounded-md {
  border-radius: 0.375rem;
}

.rounded-full {
  border-radius: 9999px;
}

.rounded-r-md {
  border-top-right-radius: 0.375rem;
  border-bottom-right-radius: 0.375rem;
}

.rounded-l-md {
  border-top-left-radius: 0.375rem;
  border-bottom-left-radius: 0.375rem;
}

.border-2 {
  border-width: 2px;
}

.border {
  border-width: 1px;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.inline-flex {
  display: inline-flex;
}

.table {
  display: table;
}

.hidden {
  display: none;
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.flex-1 {
  flex: 1 1 0%;
}

.flex-shrink-0 {
  flex-shrink: 0;
}

.font-medium {
  font-weight: 500;
}

.font-bold {
  font-weight: 700;
}

.h-4 {
  height: 1rem;
}

.h-5 {
  height: 1.25rem;
}

.h-8 {
  height: 2rem;
}

.h-12 {
  height: 3rem;
}

.h-full {
  height: 100%;
}

.text-xs {
  font-size: 0.75rem;
}

.text-sm {
  font-size: 0.875rem;
}

.text-lg {
  font-size: 1.125rem;
}

.text-xl {
  font-size: 1.25rem;
}

.text-2xl {
  font-size: 1.5rem;
}

.text-6xl {
  font-size: 4rem;
}

.leading-4 {
  line-height: 1rem;
}

.leading-5 {
  line-height: 1.25rem;
}

.mx-2 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.my-3 {
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
}

.my-4 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.my-6 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.mt-1 {
  margin-top: 0.25rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.ml-3 {
  margin-left: 0.75rem;
}

.ml-5 {
  margin-left: 1.25rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mb-8 {
  margin-bottom: 2rem;
}

.mb-20 {
  margin-bottom: 5rem;
}

.-ml-px {
  margin-left: -1px;
}

.max-w-3xl {
  max-width: 48rem;
}

.opacity-0 {
  opacity: 0;
}

.group:hover .group-hover\:opacity-100 {
  opacity: 1;
}

.focus\:outline-none:focus {
  outline: 0;
}

.overflow-hidden {
  overflow: hidden;
}

.p-3 {
  padding: 0.75rem;
}

.p-4 {
  padding: 1rem;
}

.p-6 {
  padding: 1.5rem;
}

.py-1 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.py-3 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.py-8 {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.py-1\.5 {
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
}

.py-2\.5 {
  padding-top: 0.625rem;
  padding-bottom: 0.625rem;
}

.px-2\.5 {
  padding-left: 0.625rem;
  padding-right: 0.625rem;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.inset-0 {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.right-full {
  right: 100%;
}

.left-full {
  left: 100%;
}

.shadow-sm {
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
}

.shadow-lg {
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
}

.focus\:shadow-outline-blue:focus {
  box-shadow: 0 0 0 3px rgba(164, 202, 254, 0.45);
}

.focus\:shadow-outline-pink:focus {
  box-shadow: 0 0 0 3px rgba(248, 180, 217, 0.45);
}

.text-center {
  text-align: center;
}

.text-transparent {
  color: transparent;
}

.text-white {
  --text-opacity: 1;
  color: #ffffff;
  color: rgba(255, 255, 255, var(--text-opacity));
}

.text-gray-200 {
  --text-opacity: 1;
  color: #e5e7eb;
  color: rgba(229, 231, 235, var(--text-opacity));
}

.text-gray-300 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210, 214, 220, var(--text-opacity));
}

.text-gray-400 {
  --text-opacity: 1;
  color: #9fa6b2;
  color: rgba(159, 166, 178, var(--text-opacity));
}

.text-gray-500 {
  --text-opacity: 1;
  color: #6b7280;
  color: rgba(107, 114, 128, var(--text-opacity));
}

.text-gray-600 {
  --text-opacity: 1;
  color: #4b5563;
  color: rgba(75, 85, 99, var(--text-opacity));
}

.text-gray-700 {
  --text-opacity: 1;
  color: #374151;
  color: rgba(55, 65, 81, var(--text-opacity));
}

.text-gray-900 {
  --text-opacity: 1;
  color: #161e2e;
  color: rgba(22, 30, 46, var(--text-opacity));
}

.text-red-400 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249, 128, 128, var(--text-opacity));
}

.text-red-600 {
  --text-opacity: 1;
  color: #e02424;
  color: rgba(224, 36, 36, var(--text-opacity));
}
/* ... */

